--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,189 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-    >
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML Form</title>
-    <link rel="stylesheet" href="./style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
-    <script type="text/javascript" src="./main.js"></script>
+    <form action="http://localhost:8080/" 
+    method="post" 
+    class="main_field">
+
+      <fieldset>
+        <legend>Personal information</legend>
+
+        <label class="form-field">
+          Surname:
+          <input 
+          type="text" 
+          name="surname" 
+          required
+          >
+        </label>
+
+        <label class="form-field">
+          Name:
+          <input 
+          type="text" 
+          name="name" 
+          required
+          >
+        </label>
+
+        <label class="form-field">
+          How old are You?
+          <input 
+          type="number" 
+          name="old" 
+          min="1" 
+          max="100" 
+          placeholder="12"
+          >
+        </label>
+
+        <label class="form-field">
+          Full date of birth:
+          <input 
+          type="date" 
+          name="birth"
+          >
+        </label>
+
+        <div class="form-field">
+          <label for="terms">I accept the terms of the agreement</label>
+          <input 
+          type="checkbox" 
+          id="terms" 
+          name="terms"
+          >
+        </div>
+      </fieldset>
+    </form>
+
+    <form action="http://localhost:8080/" 
+    method="post" 
+    class="main_field">
+      <fieldset>
+        <legend>Registration</legend>
+
+        <label class="form-field">
+          E-mail:
+          <input 
+          type="email" 
+          name="mail" 
+          placeholder="email@example.com" 
+          required
+          >
+        </label>
+
+        <label class="form-field">
+          Password:
+          <input 
+          type="password" 
+          name="pass" 
+          minlength="0" 
+          maxlength="10" 
+          required
+          >
+        </label>
+      </fieldset>
+    </form>
+
+    <form action="http://localhost:8080/" 
+    method="post" 
+    class="main_field">
+      <fieldset>
+        <legend>An interesting fact about you!</legend>
+
+        <div class="form-field">
+          Do you love cats?
+          <label>
+            <input 
+            type="radio" 
+            name="yes" 
+            value="y"
+            >
+            Yes
+          </label>
+
+          <label>
+            <input 
+            type="radio" 
+            name="no" 
+            value="n"
+            >
+            No
+          </label>
+        </div>
+
+        <div class="form-field">
+          What is your favorite color?
+          <input 
+          type="color" 
+          name="color"
+          >
+        </div>
+
+        <div class="form-field">
+          <label>
+            What time do you go to bed?
+            <input 
+            type="time" 
+            name="time"
+            >
+          </label>
+        </div>
+
+        <div class="form-field">
+          <label>
+            What are your favorite brand of cars?
+            <select name="cars">
+              <option value="123" 
+              selected 
+              multiple
+             ></option>
+              <option value="BMW">BMW</option>
+              <option value="Audi">Audi</option>
+              <option value="Lada">Lada</option>
+            </select>
+          </label>
+        </div>
+
+        <div class="form-field">
+          How do you rate our work?
+          <input type="range" name="volume">
+        </div>
+      </fieldset>
+    </form>
+
+    <form action="http://localhost:8080/" 
+    method="post" 
+    class="main_field">
+      <fieldset>
+        <legend>Additional info:</legend>
+
+        <div class="form-field">
+          Comments:
+          <textarea name="feedback" 
+          rows="2" 
+          cols="30" 
+          autocomplete="off" 
+          class="form-fiels"
+         ></textarea>
+        </div>
+
+        <label class="form-field">
+          Would you recommend us?
+          <select name="feedback" required>
+            <option value="yes">Yes</option>
+            <option value="no">No</option>
+          </select>
+        </label>
+      </fieldset>
+    </form>
+    <button type="submit">Submit</button>
   </body>
 </html>
