--- a/src/index.html
+++ b/src/index.html
@@ -140,7 +140,7 @@
         <div class="form-field">
           <label>
             What are your favorite brand of cars?
-            <select name="cars">
+            <select name="cars" multiple>
               <option value="123" 
               selected 
               multiple
@@ -168,8 +168,8 @@
         <div class="form-field">
           Comments:
           <textarea name="feedback" 
-          rows="2" 
-          cols="10" 
+          rows="1" 
+          cols="15" 
           autocomplete="off" 
           class="form-fiels"
          ></textarea>
