After git check

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HTML Form</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <form action="http://localhost:8080/" 
+    <h1>HTML Form</h1>
+    <script type="text/javascript" src="./main.js"></script>
+    <form action="http://localhost:8080/" method="post">
+
+      <form action="http://localhost:8080/" 
     method="post" 
     class="main_field">
 
@@ -140,7 +145,7 @@
         <div class="form-field">
           <label>
             What are your favorite brand of cars?
-            <select name="cars" multiple>
+            <select name="cars">
               <option value="123" 
               selected 
               multiple
@@ -168,8 +173,8 @@
         <div class="form-field">
           Comments:
           <textarea name="feedback" 
-          rows="1" 
-          cols="15" 
+          rows="2" 
+          cols="30" 
           autocomplete="off" 
           class="form-fiels"
          ></textarea>
