After git check

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,10 @@
   <body>
     <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
-    <form action="http://localhost:8080/" method="post">
-
-      <form action="http://localhost:8080/" 
+    <form action="http://localhost:8080/" 
     method="post" 
-    class="main_field">
+    class="main_field"
+    >
 
       <fieldset>
         <legend>Personal information</legend>
