--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    >
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form</title>
     <link rel="stylesheet" href="./style.css">
@@ -123,13 +124,13 @@
           </label>
         </div>
 
-        <div class="form-field">
+        <label class="form-field">
           What is your favorite color?
           <input 
           type="color" 
           name="color"
           >
-        </div>
+        </label>
 
         <div class="form-field">
           <label>
@@ -157,8 +158,10 @@
         </div>
 
         <div class="form-field">
+          <label>
           How do you rate our work?
-          <input type="range" name="volume">
+            <input type="range" name="volume">
+          </label>
         </div>
       </fieldset>
     </form>
